# TheUnduster

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.beads/: config.yaml  interactions.jsonl  metadata.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: app.yml  engine.yml  training.yml
app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
app/src/: App.svelte  app.css  main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: cache.rs  detect.rs  export.rs  images.rs  jobs.rs  lib.rs  main.rs  masks.rs  models.rs  protocol.rs  roll.rs
app/src/lib/: Filmstrip.svelte  Icon.svelte  LogPanel.svelte  QueuePanel.svelte  ShortcutsPanel.svelte  StatusBar.svelte  Toasts.svelte  Viewer.svelte  brush.test.ts  brush.ts  detections.test.ts  detections.ts  drop.test.ts  drop.ts  heal.test.ts  heal.ts  jobstate.test.ts  jobstate.ts  queue.test.ts  queue.ts  renderer.test.ts  renderer.ts  roll-nav.test.ts  roll-nav.ts  status.test.ts  status.ts  toasts.test.ts  toasts.ts  viewport.test.ts  viewport.ts
docs/: HANDOVER.md  user-manual.md
docs/superpowers/plans/: 2026-07-07-training-pipeline.md  2026-07-08-app-3a-shell-viewer.md  2026-07-08-app-3b1-detection-overlay.md  2026-07-08-app-3b2-roll-workflow.md  2026-07-08-app-3c-heal-export.md  2026-07-08-core-engine.md  2026-07-09-app-3b3-brush.md  2026-07-09-hardening.md  2026-07-09-inpaint-model.md  2026-07-09-job-queue.md  2026-07-09-polish-batch.md  2026-07-09-state-cache.md  2026-07-09-ui-pass-1.md  2026-07-10-export-queue-and-zoom.md  2026-07-10-heal-window-batching.md  2026-07-10-probs-memory-and-detect-progress.md  2026-07-10-pyramid-cache.md  2026-07-10-ui-pass-2.md
docs/superpowers/specs/: 2026-07-07-theunduster-design.md
engine/: Cargo.toml  README.md
engine/crates/fd-heal/: Cargo.toml
engine/crates/fd-heal/src/: classical.rs  components.rs  dilate.rs  grain.rs  group.rs  heal.rs  inpaint.rs  lib.rs
engine/crates/fd-heal/tests/: classical.rs  components.rs  dilate.rs  heal.rs  heal_windowed.rs  inpaint_fixed.rs
engine/crates/fd-infer/: Cargo.toml
engine/crates/fd-infer/src/: lib.rs
engine/crates/fd-infer/tests/: parity.rs
engine/crates/fd-io/: Cargo.toml
engine/crates/fd-io/src/: buf.rs  lib.rs  metadata.rs  png_jpeg.rs  tiff_io.rs
engine/crates/fd-io/tests/: metadata.rs  png_roundtrip.rs  tiff_roundtrip.rs
engine/crates/fd-tiles/: Cargo.toml
engine/crates/fd-tiles/src/: cache.rs  lib.rs  probs.rs  pyramid.rs
engine/crates/fd-tiles/tests/: cache.rs  pyramid.rs
engine/fixtures/: demo-detector.onnx  parity-meta.json  tiny-detector.onnx  tiny-inpaint-fixed.onnx  tiny-inpaint.onnx
training/: .gitignore  DATA.md  README.md  pyproject.toml
training/scripts/: make_demo_detector.py  make_engine_fixtures.py
training/src/unduster_training/: benchmark.py  composite.py  dataset.py  detectors.py  export.py  filmlook.py  harvest.py  io.py  metrics.py  model.py  train.py
training/tests/: conftest.py  test_benchmark.py  test_composite.py  test_dataset.py  test_detectors.py  test_export.py  test_filmlook.py  test_fixtures.py  test_harvest.py  test_io.py  test_metrics.py  test_model.py  test_train.py
