[project]
name = "unduster-training"
version = "0.1.0"
description = "Offline training pipeline for TheUnduster defect detector"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "opencv-python-headless>=4.9",
    "imageio>=2.34",
    "tifffile>=2024.2.12",
    "torch>=2.3",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "onnxscript>=0.1",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unduster_training"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# CI runs on linux and only needs CPU inference; the default PyPI torch
# wheel drags the full CUDA stack (multi-GB) with it there. macOS wheels
# are already CPU/MPS-only, so this pin is linux-scoped.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
