[package]
name = "unduster-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "unduster_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fd-io = { path = "../../engine/crates/fd-io" }
fd-tiles = { path = "../../engine/crates/fd-tiles" }
fd-infer = { path = "../../engine/crates/fd-infer" }
fd-heal = { path = "../../engine/crates/fd-heal" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "time"] }
futures-util = "0.3"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
